--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.8.1",
+    "@material-ui/icons": "^4.9.1",
     "@material-ui/pickers": "^3.2.8",
     "@material-ui/styles": "^4.7.1",
     "@testing-library/jest-dom": "^4.2.4",
